# docx-comments

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  continuous-delivery.yml
docs/: conf.py  index.rst
python/docx_comments/: __init__.py  get_comments.py
src/: lib.rs
src/docx_comments/: __init__.py  get_comments.py
tests/: test_package.py
tests/data/: test_comments.txt  test_document.docx
